--- a/Hotel - 4/rooms_rate.html
+++ b/Hotel - 4/rooms_rate.html
@@ -32,6 +32,17 @@
         <img src="./assets/images/Logo_and_icon/Icon beside heads.png" alt="">
         <h3>Rooms & Rate</h3>
       </div>
+      <div class="flex">
+        <div class="search">
+          <input type="text" class="search__input">
+          <button class="just-btn bg-dark__deep">search</button>
+        </div>
+        <div class="group-buttons">
+          <button class="just-btn bg-primary">View Rooms</button>
+          <button class="just-btn bg-secondary">Book Rooms</button>
+          <button class="just-btn bg-dark">See Rates</button>
+        </div>
+      </div>
       <div id="roomsGallery" class="rooms__gallery">
         <div class="gallery__card">
           <img class="gallery__image" src="./assets/images/Rooms_and_Rates/Room (1).png" alt="">
@@ -178,3 +189,185 @@
   <script src="./js/app.js"></script>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
