--- a/Hotel - 4/index.html
+++ b/Hotel - 4/index.html
@@ -18,26 +18,32 @@
           <li class="nav-item"><a href="rooms_rate.html">Rooms and rates</a></li>
           <li class="nav-item"><a href="facilities.html">Facilities</a></li>
           <li>
-            <img
+            <img id="humberger"
               src="./assets/images/Logo_and_icon/icon-hamburger.svg"
               alt="menu"
             />
           </li>
         </ul>
+          <div id="xmMenu" class="hum-nav hide">
+            <li class=""><a href="index.html">Home</a></li>
+            <li class=""><a href="contact.html">Contact Us</a></li>
+            <li class=""><a href="rooms_rate.html">Rooms and rates</a></li>
+            <li class=""><a href="facilities.html">Facilities</a></li>
+          </div>
       </nav>
       <div class="hero-text">
         <h1 class="p1">
           best rooms, best rates.
         </h1>
-        <p class="p2">
+        <p class="p2 mb-2">
           The only 7star Hotel in the whole of WAKANDA, has the best of rooms,
           the best of proces and best of everything.
         </p>
         <form action="GET">
-          <input type="text" placeholder="Type City...anywhere" name="search" />
+          <input  type="text" placeholder="Type City...anywhere" name="search" />
           <button type="submit">Search</button>
         </form>
-        <div class="btns">
+        <div class="btns xm-hide">
           <button class="btn1">View Rooms</button>
           <button class="btn2">Book Rooms</button>
           <button class="btn3">See Rates</button>
@@ -268,6 +274,6 @@
         </div>
       </div>
     </section>
-    <script src="./js/slider.js"></script>
+    <script src="./js/app.js"></script>
   </body>
 </html>
