--- a/Hotel - 4/contact.html
+++ b/Hotel - 4/contact.html
@@ -19,12 +19,18 @@
         <li class="nav-item"><a href="rooms_rate.html">Rooms and rates</a></li>
         <li class="nav-item"><a href="facilities.html">Facilities</a></li>
         <li>
-          <img
+          <img id="humberger"
             src="./assets/images/Logo_and_icon/icon-hamburger.svg"
             alt="menu"
           />
         </li>
       </ul>
+      <div id="xmMenu" class="hum-nav hide">
+        <li class=""><a href="index.html">Home</a></li>
+        <li class=""><a href="contact.html">Contact Us</a></li>
+        <li class=""><a href="rooms_rate.html">Rooms and rates</a></li>
+        <li class=""><a href="facilities.html">Facilities</a></li>
+      </div>
     </nav>
   </header>
   <div class="flex-container">
@@ -95,6 +101,7 @@
       </div>
     </div>
   </section>
+  <script src="./js/app.js"></script>
 </body>
 
 </html>
