--- a/Hotel - 4/rooms_rate.html
+++ b/Hotel - 4/rooms_rate.html
@@ -18,12 +18,18 @@
         <li class="nav-item"><a href="./rooms_rate.html">Rooms and rates</a></li>
         <li class="nav-item"><a href="./facilities.html">Facilities</a></li>
         <li>
-          <img
+          <img id="humberger"
             src="./assets/images/Logo_and_icon/icon-hamburger.svg"
             alt="menu"
           />
         </li>
       </ul>
+      <div id="xmMenu" class="hum-nav hide">
+        <li class=""><a href="index.html">Home</a></li>
+        <li class=""><a href="contact.html">Contact Us</a></li>
+        <li class=""><a href="rooms_rate.html">Rooms and rates</a></li>
+        <li class=""><a href="facilities.html">Facilities</a></li>
+      </div>
     </nav>
   </header>
   <section class="rooms">
@@ -34,7 +40,7 @@
       </div>
       <div class="flex">
         <div class="search">
-          <input type="text" class="search__input">
+          <input type="text" class="search__input" placeholder="Type City..anywhere">
           <button class="just-btn bg-dark__deep">search</button>
         </div>
         <div class="group-buttons">
@@ -92,7 +98,7 @@
         <div class="gallery__card">
           <img class="gallery__image" src="./assets/images/Rooms_and_Rates/Room (4).png" alt="">
           <div class="rooms__body">
-           <div class="row">
+           <div class="row colm">
              <div class="col">
                <h4 class="rooms__title">Master 912</h4>
                <p class="rooms__text">Master Bedroom with 3 pillows and sofa</p>
