Contact-Form by James for Hotel-4 of Team International

--- a/Hotel - 4/contact.html
+++ b/Hotel - 4/contact.html
@@ -1,12 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="./css/main.css" />
-  <title>Contact Us</title>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/main.css" />
+    <title>Contact Us</title>
+  </head>
+
+  <body>
+    <div class="flex-container">
+      <div class="form">
+        <form action="">
+          <div id="contactus">
+            <img
+              class="logo"
+              src="./assets/images/Logo and icon/Icon beside heads.png"
+              alt="WAKANDAlogo"
+            />
+            <span id="logo">
+              CONTACT US
+            </span>
+          </div>
+          <div>
+            <span id="mails"
+              ><input
+                type="text"
+                name="Email"
+                id="address"
+                placeholder="Email Address" /><input
+                type="text"
+                name="Phone Number"
+                id="phone"
+                placeholder="Work Phone"
+            /></span>
+          </div>
+          <div><input type="text" placeholder="Full Name" id="fullname" /></div>
+          <div>
+            <textarea
+              name="Message"
+              id="message"
+              placeholder="Your message"
+            ></textarea>
+          </div>
+          <div><input type="submit" value="Submit" id="submit" /></div>
+        </form>
+      </div>
+      <div class="image">
+        <img
+          id="hotelimage"
+          src="./assets/images/Contact Us page/Contact Page.png"
+          alt="Hotel"
+        />
+      </div>
+    </div>
+  </body>
 </html>
