add navbar and home slider section

--- a/Hotel - 4/facility.html
+++ b/Hotel - 4/facility.html
@@ -1,12 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Wakanda - Facility</title>
-  <link rel="stylesheet" href="css/main.css">
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Wakanda - Facility</title>
+    <link rel="stylesheet" href="css/main.css" />
+  </head>
+  <body>
+    <nav class="bg-teal header">
+      <ul>
+        <li class="nav-item"><a href="index.html">Home</a></li>
+        <li class="nav-item"><a href="contact.html">Contact Us</a></li>
+        <li class="nav-item3">
+          <img src="./assets/images/Logo_and_icon/Logo Light.png" alt="" />
+        </li>
+        <li class="nav-item">
+          <a href="rooms_rate.html">Rooms and rates</a>
+        </li>
+        <li class="nav-item"><a href="facilities.html">Facilities</a></li>
+        <li>
+          <img
+            id="humberger"
+            src="./assets/images/Logo_and_icon/icon-hamburger.svg"
+            alt="menu"
+          />
+        </li>
+      </ul>
+      <div id="xmMenu" class="hum-nav hide">
+        <li class=""><a href="index.html">Home</a></li>
+        <li class=""><a href="contact.html">Contact Us</a></li>
+        <li class=""><a href="rooms_rate.html">Rooms and rates</a></li>
+        <li class=""><a href="facility.html">Facilities</a></li>
+      </div>
+    </nav>
+    <script src="./js/app.js"></script>
+  </body>
 </html>
