--- a/Hotel - 4/rooms_rate.html
+++ b/Hotel - 4/rooms_rate.html
@@ -1,127 +1,217 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Rooms and Rate - Wakanda</title>
-  <link rel="stylesheet" href="css/main.css">
-</head>
-<body>
-  <section class="rooms">
-    <div class="container">
-      <div class="showcase heading">
-        <img src="./assets/images/Logo_and_icon/Icon beside heads.png" alt="">
-        <h3>Rooms & Rate</h3>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Rooms and Rate - Wakanda</title>
+    <link rel="stylesheet" href="css/main.css" />
+  </head>
+  <body>
+    <nav class="bg-teal header">
+      <ul>
+        <li class="nav-item"><a href="index.html">Home</a></li>
+        <li class="nav-item"><a href="contact.html">Contact Us</a></li>
+        <li class="nav-item3">
+          <img src="./assets/images/Logo_and_icon/Logo Light.png" alt="" />
+        </li>
+        <li class="nav-item">
+          <a href="rooms_rate.html">Rooms and rates</a>
+        </li>
+        <li class="nav-item"><a href="facilities.html">Facilities</a></li>
+        <li>
+          <img
+            id="humberger"
+            src="./assets/images/Logo_and_icon/icon-hamburger.svg"
+            alt="menu"
+          />
+        </li>
+      </ul>
+      <div id="xmMenu" class="hum-nav hide">
+        <li class=""><a href="index.html">Home</a></li>
+        <li class=""><a href="contact.html">Contact Us</a></li>
+        <li class=""><a href="rooms_rate.html">Rooms and rates</a></li>
+        <li class=""><a href="facility.html">Facilities</a></li>
       </div>
-      <div class="flex">
-        <div class="search">
-          <input type="text" class="search__input" placeholder="Type City..anywhere">
-          <button class="just-btn bg-dark__deep">search</button>
+    </nav>
+    <section class="rooms">
+      <div class="container">
+        <div class="showcase heading">
+          <img
+            src="./assets/images/Logo_and_icon/Icon beside heads.png"
+            alt=""
+          />
+          <h3>Rooms & Rate</h3>
         </div>
-        <div class="group-buttons">
-          <button class="just-btn bg-primary">View Rooms</button>
-          <button class="just-btn bg-secondary">Book Rooms</button>
-          <button class="just-btn bg-dark">See Rates</button>
+        <div class="flex">
+          <div class="search">
+            <input
+              type="text"
+              class="search__input"
+              placeholder="Type City..anywhere"
+            />
+            <button class="just-btn bg-dark__deep">search</button>
+          </div>
+          <div class="group-buttons">
+            <button class="just-btn bg-primary">View Rooms</button>
+            <button class="just-btn bg-secondary">Book Rooms</button>
+            <button class="just-btn bg-dark">See Rates</button>
+          </div>
         </div>
+        <div id="roomsGallery" class="rooms__gallery">
+          <div class="gallery__card">
+            <img
+              class="gallery__image"
+              src="./assets/images/Rooms_and_Rates/Room (1).png"
+              alt=""
+            />
+            <div class="rooms__body">
+              <div class="row">
+                <div class="col">
+                  <h4 class="rooms__title">Master 009</h4>
+                  <p class="rooms__text">
+                    Master Bedroom with 3 pillows and sofa
+                  </p>
+                </div>
+                <div class="col row">
+                  <h4 class="rooms__title2">
+                    $400 <br />
+                    <span>Per Night</span>
+                  </h4>
+                  <button class="rooms__button">Book now</button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="gallery__card">
+            <img
+              class="gallery__image"
+              src="./assets/images/Rooms_and_Rates/Room (2).png"
+              alt=""
+            />
+            <div class="rooms__body">
+              <div class="row">
+                <div class="col">
+                  <h4 class="rooms__title">Master F27</h4>
+                  <p class="rooms__text">
+                    Master Bedroom with 3 pillows and sofa
+                  </p>
+                </div>
+                <div class="col row">
+                  <h4 class="rooms__title2">
+                    $380 <br />
+                    <span>Per Night</span>
+                  </h4>
+                  <button class="rooms__button">Book now</button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="gallery__card">
+            <img
+              class="gallery__image"
+              src="./assets/images/Rooms_and_Rates/Room (3).png"
+              alt=""
+            />
+            <div class="rooms__body">
+              <div class="row">
+                <div class="col">
+                  <h4 class="rooms__title">Bedroom 932</h4>
+                  <p class="rooms__text">
+                    Master Bedroom with 3 pillows and sofa
+                  </p>
+                </div>
+                <div class="col row">
+                  <h4 class="rooms__title2">
+                    $932 <br />
+                    <span>Per Night</span>
+                  </h4>
+                  <button class="rooms__button">Book now</button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="gallery__card">
+            <img
+              class="gallery__image"
+              src="./assets/images/Rooms_and_Rates/Room (4).png"
+              alt=""
+            />
+            <div class="rooms__body">
+              <div class="row colm">
+                <div class="col">
+                  <h4 class="rooms__title">Master 912</h4>
+                  <p class="rooms__text">
+                    Master Bedroom with 3 pillows and sofa
+                  </p>
+                </div>
+                <div class="col row">
+                  <h4 class="rooms__title2">
+                    $912 <br />
+                    <span>Per Night</span>
+                  </h4>
+                  <button class="rooms__button">Book now</button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="gallery__card">
+            <img
+              class="gallery__image"
+              src="./assets/images/Rooms_and_Rates/Room (5).png"
+              alt=""
+            />
+            <div class="rooms__body">
+              <div class="row">
+                <div class="col">
+                  <h4 class="rooms__title">BEDSTA 202</h4>
+                  <p class="rooms__text">
+                    Master Bedroom with 3 pillows and sofa
+                  </p>
+                </div>
+                <div class="col row">
+                  <h4 class="rooms__title2">
+                    $490 <br />
+                    <span>Per Night</span>
+                  </h4>
+                  <button class="rooms__button">Book now</button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="gallery__card">
+            <img
+              class="gallery__image"
+              src="./assets/images/Rooms_and_Rates/Room (6).png"
+              alt=""
+            />
+            <div class="rooms__body">
+              <div class="row">
+                <div class="col">
+                  <h4 class="rooms__title">HOODbed 317</h4>
+                  <p class="rooms__text">
+                    Master Bedroom with 3 pillows and sofa
+                  </p>
+                </div>
+                <div class="col row">
+                  <h4 class="rooms__title2">
+                    $470 <br />
+                    <span>Per Night</span>
+                  </h4>
+                  <button class="rooms__button">Book now</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <br />
+        <div class="center">
+          <a class="rooms__button2" href="./rooms_rate.html"
+            >See more rooms >></a
+          >
+        </div>
+        <br />
       </div>
-      <div id="roomsGallery" class="rooms__gallery">
-        <div class="gallery__card">
-          <img class="gallery__image" src="./assets/images/Rooms_and_Rates/Room (1).png" alt="">
-          <div class="rooms__body">
-           <div class="row">
-             <div class="col">
-               <h4 class="rooms__title">Master 009</h4>
-               <p class="rooms__text">Master Bedroom with 3 pillows and sofa</p>
-             </div>
-             <div class="col row">
-              <h4 class="rooms__title2">$400 <br> <span>Per Night</span></h4>
-              <button class="rooms__button">Book now</button>
-             </div>
-           </div>
-          </div>
-        </div>
-        <div class="gallery__card">
-          <img class="gallery__image" src="./assets/images/Rooms_and_Rates/Room (2).png" alt="">
-          <div class="rooms__body">
-           <div class="row">
-             <div class="col">
-               <h4 class="rooms__title">Master F27</h4>
-               <p class="rooms__text">Master Bedroom with 3 pillows and sofa</p>
-             </div>
-             <div class="col row">
-              <h4 class="rooms__title2">$380 <br> <span>Per Night</span></h4>
-              <button class="rooms__button">Book now</button>
-             </div>
-           </div>
-          </div>
-        </div>
-        <div class="gallery__card">
-          <img class="gallery__image" src="./assets/images/Rooms_and_Rates/Room (3).png" alt="">
-          <div class="rooms__body">
-           <div class="row">
-             <div class="col">
-               <h4 class="rooms__title">Bedroom 932</h4>
-               <p class="rooms__text">Master Bedroom with 3 pillows and sofa</p>
-             </div>
-             <div class="col row">
-              <h4 class="rooms__title2">$932 <br> <span>Per Night</span></h4>
-              <button class="rooms__button">Book now</button>
-             </div>
-           </div>
-          </div>
-        </div>
-        <div class="gallery__card">
-          <img class="gallery__image" src="./assets/images/Rooms_and_Rates/Room (4).png" alt="">
-          <div class="rooms__body">
-           <div class="row colm">
-             <div class="col">
-               <h4 class="rooms__title">Master 912</h4>
-               <p class="rooms__text">Master Bedroom with 3 pillows and sofa</p>
-             </div>
-             <div class="col row">
-              <h4 class="rooms__title2">$912 <br> <span>Per Night</span></h4>
-              <button class="rooms__button">Book now</button>
-             </div>
-           </div>
-          </div>
-        </div>
-        <div class="gallery__card">
-          <img class="gallery__image" src="./assets/images/Rooms_and_Rates/Room (5).png" alt="">
-          <div class="rooms__body">
-           <div class="row">
-             <div class="col">
-               <h4 class="rooms__title">BEDSTA 202</h4>
-               <p class="rooms__text">Master Bedroom with 3 pillows and sofa</p>
-             </div>
-             <div class="col row">
-              <h4 class="rooms__title2">$490 <br> <span>Per Night</span></h4>
-              <button class="rooms__button">Book now</button>
-             </div>
-           </div>
-          </div>
-        </div>
-        <div class="gallery__card">
-          <img class="gallery__image" src="./assets/images/Rooms_and_Rates/Room (6).png" alt="">
-          <div class="rooms__body">
-           <div class="row">
-             <div class="col">
-               <h4 class="rooms__title">HOODbed 317</h4>
-               <p class="rooms__text">Master Bedroom with 3 pillows and sofa</p>
-             </div>
-             <div class="col row">
-              <h4 class="rooms__title2">$470 <br> <span>Per Night</span></h4>
-              <button class="rooms__button">Book now</button>
-             </div>
-           </div>
-          </div>
-        </div>
-        </div>
-      <br>
-      <div class="center">
-        <a class="rooms__button2" href="./rooms_rate.html">See more rooms >></a>
-      </div>
-      <br>
-    </div>
-  </section>
-</body>
+    </section>
+    <script src="./js/app.js"></script>
+  </body>
 </html>
