added other styles and facility page

--- a/Hotel - 4/facility.html
+++ b/Hotel - 4/facility.html
@@ -33,6 +33,24 @@
         <li class=""><a href="facility.html">Facilities</a></li>
       </div>
     </nav>
-    <script src="./js/app.js"></script>
+    <section class="facility">
+      <div class="container">
+        <div class="showcase">
+          <img src="./assets/images/Logo_and_icon/Icon beside heads.png" alt="">
+          <h3>Facilities</h3>
+        </div>
+      
+        <div id="facilityGallery" class="facility__gallery">
+          <!-- <div class="gallery__card">
+            <img class="gallery__image" src="./assets/images/Facilities/Facility (1).png" alt="">
+            <div class="gallery__body">
+              <h3 class="gallery__body--head">Content</h3>
+              <p class="gallery__body--text">lorem episum get lllno mei</p>
+            </div>
+          </div> -->
+        </div>
+      </div>
+    </section>
+    <script src="script/app.js"></script>
   </body>
 </html>
