--- a/Hotel - 4/contact.html
+++ b/Hotel - 4/contact.html
@@ -78,6 +78,50 @@
         />
       </div>
     </div>
-    <script src="./js/app.js"></script>
+    <section class="footer">
+      <div class="container">
+        <div class="row mb-4">
+          <div class="col-4">
+            <img class="footer__logo" src="assets/images/Logo_and_icon/Logo Light.png" alt="">
+          </div>
+          <div class="col-2">
+            <h3 class="footer__label">Support</h3>
+          </div>
+          <div class="col-2">
+            <h3 class="footer__label">Follow us on</h3>
+          </div>
+        </div>
+        <hr>
+        <div class="row mt-3">
+          <div class="col-4">
+           <p class="footer__text mb-2">
+             The biggest hotel in all of <span class="footer__hotel-name">Wakanda</span>
+             with premium services and premium roooms all for your comfort.</p>
+           <p class="footer__text xm-hide">Copyright &copy; 2020 <span class="footer__hotel-name">Wakanda</span> hotels. All rights reserved.</p>
+          </div>
+          <div class="col-2">
+            <ul>
+              <li class="footer__support">Frequently Asked Questions</li>
+              <li class="footer__support">Terms & Condition</li>
+              <li class="footer__support">Privacy Policy</li>
+              <li class="footer__support">Prohibited Items</li>
+            </ul>
+          </div>
+          <div class="col-2">
+            <ul class="social-handles row">
+              <li class="social-icon"><img src="assets/images/Social Media Icons/icons8_facebook_circled_48px.png" alt=""></li>
+              <li class="social-icon"><img src="assets/images/Social Media Icons/icons8_linkedin_circled_48px.png" alt=""></li>
+              <li class="social-icon"><img src="assets/images/Social Media Icons/icons8_twitter_circled_48px.png" alt=""></li>
+            </ul>
+          </div>
+        </div>
+        <div class="lg-hide row">
+          <div class="col-4">
+            <p class="footer__text">Copyright &copy; 2020 <span class="footer__hotel-name">Wakanda</span> hotels. All rights reserved.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <script src="script/app.js"></script>
   </body>
 </html>
