index page updated

--- a/Hotel - 4/index.html
+++ b/Hotel - 4/index.html
@@ -53,6 +53,186 @@
         </div>
       </div>
     </div>
+    <section class="rooms">
+      <div class="container">
+        <div class="showcase heading">
+          <img src="./assets/images/Logo_and_icon/Icon beside heads.png" alt="">
+          <h3>Rooms & Rate</h3>
+        </div>
+        <div id="roomsGallery" class="rooms__gallery">
+          <div class="gallery__card">
+            <img class="gallery__image" src="./assets/images/Rooms_and_Rates/Room (1).png" alt="">
+            <div class="rooms__body">
+             <div class="row">
+               <div class="col">
+                 <h4 class="rooms__title">Master 009</h4>
+                 <p class="rooms__text">Master Bedroom with 3 pillows and sofa</p>
+               </div>
+               <div class="col row">
+                <h4 class="rooms__title2">$400 <br> <span>Per Night</span></h4>
+                <button class="rooms__button">Book now</button>
+               </div>
+             </div>
+            </div>
+          </div>
+          <div class="gallery__card">
+            <img class="gallery__image" src="./assets/images/Rooms_and_Rates/Room (2).png" alt="">
+            <div class="rooms__body">
+             <div class="row">
+               <div class="col">
+                 <h4 class="rooms__title">Master F27</h4>
+                 <p class="rooms__text">Master Bedroom with 3 pillows and sofa</p>
+               </div>
+               <div class="col row">
+                <h4 class="rooms__title2">$380 <br> <span>Per Night</span></h4>
+                <button class="rooms__button">Book now</button>
+               </div>
+             </div>
+            </div>
+          </div>
+          <div class="gallery__card">
+            <img class="gallery__image" src="./assets/images/Rooms_and_Rates/Room (3).png" alt="">
+            <div class="rooms__body">
+             <div class="row">
+               <div class="col">
+                 <h4 class="rooms__title">Bedroom 932</h4>
+                 <p class="rooms__text">Master Bedroom with 3 pillows and sofa</p>
+               </div>
+               <div class="col row">
+                <h4 class="rooms__title2">$932 <br> <span>Per Night</span></h4>
+                <button class="rooms__button">Book now</button>
+               </div>
+             </div>
+            </div>
+          </div>
+          <div class="gallery__card">
+            <img class="gallery__image" src="./assets/images/Rooms_and_Rates/Room (4).png" alt="">
+            <div class="rooms__body">
+             <div class="row">
+               <div class="col">
+                 <h4 class="rooms__title">Master 912</h4>
+                 <p class="rooms__text">Master Bedroom with 3 pillows and sofa</p>
+               </div>
+               <div class="col row">
+                <h4 class="rooms__title2">$912 <br> <span>Per Night</span></h4>
+                <button class="rooms__button">Book now</button>
+               </div>
+             </div>
+            </div>
+          </div>
+          <div class="gallery__card">
+            <img class="gallery__image" src="./assets/images/Rooms_and_Rates/Room (5).png" alt="">
+            <div class="rooms__body">
+             <div class="row">
+               <div class="col">
+                 <h4 class="rooms__title">BEDSTA 202</h4>
+                 <p class="rooms__text">Master Bedroom with 3 pillows and sofa</p>
+               </div>
+               <div class="col row">
+                <h4 class="rooms__title2">$490 <br> <span>Per Night</span></h4>
+                <button class="rooms__button">Book now</button>
+               </div>
+             </div>
+            </div>
+          </div>
+          <div class="gallery__card">
+            <img class="gallery__image" src="./assets/images/Rooms_and_Rates/Room (6).png" alt="">
+            <div class="rooms__body">
+             <div class="row">
+               <div class="col">
+                 <h4 class="rooms__title">HOODbed 317</h4>
+                 <p class="rooms__text">Master Bedroom with 3 pillows and sofa</p>
+               </div>
+               <div class="col row">
+                <h4 class="rooms__title2">$470 <br> <span>Per Night</span></h4>
+                <button class="rooms__button">Book now</button>
+               </div>
+             </div>
+            </div>
+          </div>
+          <div class="gallery__card">
+            <img class="gallery__image" src="./assets/images/Rooms_and_Rates/Room (7).png" alt="">
+            <div class="rooms__body">
+             <div class="row">
+               <div class="col">
+                 <h4 class="rooms__title">Master 001</h4>
+                 <p class="rooms__text">Master Bedroom with 3 pillows and sofa</p>
+               </div>
+               <div class="col row">
+                <h4 class="rooms__title2">$3K <br> <span>Per Night</span></h4>
+                <button class="rooms__button">Book now</button>
+               </div>
+             </div>
+            </div>
+          </div>
+          <div class="gallery__card">
+            <img class="gallery__image" src="./assets/images/Rooms_and_Rates/Room (8).png" alt="">
+            <div class="rooms__body">
+             <div class="row">
+               <div class="col">
+                 <h4 class="rooms__title">BEDSTA 009</h4>
+                 <p class="rooms__text">Master Bedroom with 3 pillows and sofa</p>
+               </div>
+               <div class="col row">
+                <h4 class="rooms__title2">$2.5K <br> <span>Per Night</span></h4>
+                <button class="rooms__button">Book now</button>
+               </div>
+             </div>
+            </div>
+          </div>
+          <div class="gallery__card">
+            <img class="gallery__image" src="./assets/images/Rooms_and_Rates/Room (9).png" alt="">
+            <div class="rooms__body">
+             <div class="row">
+               <div class="col">
+                 <h4 class="rooms__title">LONGRoom 033</h4>
+                 <p class="rooms__text">Master Bedroom with 3 pillows and sofa</p>
+               </div>
+               <div class="col row">
+                <h4 class="rooms__title2">$950K <br> <span>Per Night</span></h4>
+                <button class="rooms__button">Book now</button>
+               </div>
+             </div>
+            </div>
+          </div>
+        </div>
+        <br>
+        <div class="center">
+          <a class="rooms__button2" href="./rooms_rate.html">See more rooms >></a>
+        </div>
+        <br>
+      </div>
+    </section>
+    <section class="facility">
+      <div class="container">
+        <div class="showcase">
+          <img src="./assets/images/Logo_and_icon/Icon beside heads.png" alt="">
+          <h3>Facilities</h3>
+        </div>
+      
+        <div id="facilityGallery" class="facility__gallery">
+          <div class="gallery__card">
+            <img class="gallery__image" src="./assets/images/Facilities/Facility (1).png" alt="">
+            <div class="gallery__body">
+              <h3 class="gallery__body--head">Seaside View</h3>
+              <p class="gallery__body--text">Seaside View for our clients </p>
+            </div>
+          </div>
+          <div class="gallery__card">
+            <img class="gallery__image" src="./assets/images/Facilities/Facility (4).png" alt="">
+            <div class="gallery__body">
+              <h3 class="gallery__body--head">Kitchen View</h3>
+              <p class="gallery__body--text">Kitchen View for our clients </p>
+            </div>
+          </div>
+        </div>
+        <br>
+        <div class="center">
+          <a class="rooms__button2" href="./facilities.html">See more facilities >></a>
+        </div>
+        <br>
+      </div>
+    </section>
     <section class="footer">
       <div class="container">
         <div class="row mb-4">
